# plover-writeouts

./: .gitignore  README.md  setup.cfg
local-utils/: generate_word_list.py  json_to_hatchery.py
plover_writeouts/: HatcheryDictionary.py  WriteoutsDictionary.py
plover_writeouts/lib/: AnnotatedKey.py  DagTrie.py  DictionaryTrieBuilder.py  Phoneme.py  Sopheme.py  Stenophoneme.py  Trie.py  alignment.py  build_lookup.py  build_phoneme_trie.py  config.py  intermediate.py  match_chars.py  match_keysymbols.py  match_sophemes.py  match_stenophonemes.py  phoneme_util.py  steno_annotations.py  stenophoneme_util.py  util.py
plover_writeouts/lib/alignment/: alignment.py  match_ortho_steno.py  match_sophemes.py  steno_annotations.py
plover_writeouts/lib/lookup/: __init__.py  build_lookup.py  build_reverse_lookup.py  build_trie.py  get_sophemes.py  util.py
plover_writeouts/lib/lookup/build_trie/: __init__.py  add_entry.py  find_clusters.py  state.py
plover_writeouts/lib/lookup/build_trie/rules/: elision.py  left_consonants.py  right_consonants.py
plover_writeouts/lib/sopheme/: Sopheme.py  Sound.py  parse.py
plover_writeouts/lib/stenophoneme/: Stenophoneme.py  stenophoneme_util.py
plover_writeouts/lib/theory/: default.py  service.py  spec.py  theory.py
plover_writeouts/lib/util/: Trie.py  config.py  util.py
test/: conftest.py  test__match_ortho_steno.py  test__match_sophemes.py  test__parse_sopheme_seq.py  test_intermediate.py  test_match_chars.py  test_match_sophemes.py
