[metadata]
name = plover-writeouts
version = 0.0.0
keywords = plover plover_plugin

description = Automatically derive writeout entries from the longest form

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
setup_requires =
    setuptools >= 30.3.0
install_requires =
    plover >= 4.0.0-rc2
    # pympler >= 1.1
packages =
    plover_writeouts
    plover_writeouts.lib

[options.entry_points]
plover.dictionary =
    writeouts-json = plover_writeouts.WriteoutsDictionary:WriteoutsDictionary